dataset/test_result/yara-buggy-1/yara-buggy-1-55/55.output
Making check in libyara
make[1]: Entering directory '/home/workspace/libyara'
make  check-am
make[2]: Entering directory '/home/workspace/libyara'
  CC       parser.lo
parser.c:714:27: error: expected '=', ',', ';', 'asm' or '__attribute__' before ':' token
  714 | inline void LinkReferences::visit(Reference& ope) {
      |                           ^
make[2]: Leaving directory '/home/workspace/libyara'
make[2]: *** [Makefile:728: parser.lo] Error 1
make[1]: Leaving directory '/home/workspace/libyara'
make[1]: *** [Makefile:899: check] Error 2
make: *** [Makefile:1013: check-recursive] Error 1
